Few small changes, added ngProgress

--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html ng-app="app">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Personal website of Andy Mepham">
         <title>Andy Mepham</title>
         <link href='https://fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
         <!-- bower:css -->
-        <link rel='stylesheet' href='app/libs/skeleton/css/normalize.css' />
-        <link rel='stylesheet' href='app/libs/skeleton/css/skeleton.css' />
+        <link rel="stylesheet" href="app/libs/skeleton/css/normalize.css" />
+        <link rel="stylesheet" href="app/libs/skeleton/css/skeleton.css" />
+        <link rel="stylesheet" href="app/libs/ngprogress/ngProgress.css" />
         <!-- endbower -->
         <link rel="stylesheet" href="css/main.css" />
         <!-- bower:js -->
         <script src="app/libs/angular/angular.js"></script>
         <script src="app/libs/angular-ui-router/release/angular-ui-router.js"></script>
+        <script src="app/libs/ngprogress/build/ngprogress.min.js"></script>
         <!-- endbower -->
         <script src="app/app.js"></script>
     </head>
@@ -18,7 +23,13 @@
         <section class="header">
             <h2 class="title">Andy Mepham</h2>
         </section>
-        <div class="container">            
+        <div class="container">        
+            <div class="social-media text-right">
+                <a href="#" title="On Facebook"><i class="ion-social-facebook"></i></a>
+                <a href="#" title="On LinkedIn"><i class="ion-social-linkedin"></i></a>
+                <a href="#" title="On Twitter"><i class="ion-social-twitter"></i></a>
+                <a href="#" title="On Pinterest"><i class="ion-social-pinterest"></i></a>
+            </div>    
             <div class="navbar">
                 <ul>
                     <li>
