* Replaced gruntfile.js with a CoffeeScript version * Added linters for CoffeeScript and Sass * Removed lint from .coffee files * Removed lint from .scss files * Removed Morgan from package.json and server.coffee * Updated README.md * Added data- prefixes to angular attributes and added classes to navigation elements * Added class definitions to main.scss for navigation elements

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="app">
+<html data-ng-app="app">
     <head>
         <!-- PAGE TITLE -->
         <title>Andy Mepham</title>
@@ -42,19 +42,19 @@
                 <a href="#" title="On Pinterest"><i class="ion-social-pinterest"></i></a>
             </div>    
             <div class="navbar">
-                <ul>
-                    <li>
-                        <a ui-sref="home">Home</a>
+                <ul class="navbar-inline">
+                    <li class="navbar-inline-item">
+                        <a data-ui-sref="home" class="navbar-inline-link">Home</a>
                     </li>
-                    <li>
-                        <a ui-sref="about">About</a> 
+                    <li class="navbar-inline-item">
+                        <a data-ui-sref="about" class="navbar-inline-link">About</a> 
                     </li>  
-                    <li>
-                        <a ui-sref="cv">CV</a>
+                    <li class="navbar-inline-item">
+                        <a data-ui-sref="cv" class="navbar-inline-link">CV</a>
                     </li>
                 </ul>                  
             </div>                    
-            <div class="row" ui-view></div>   
+            <div class="row" data-ui-view></div>   
         </div>
     </body>
 </html>
