* Added nicer layout for cv for print and large displays

--- a/public/index.html
+++ b/public/index.html
@@ -35,12 +35,12 @@
             <h2 class="title">Andy Mepham</h2>
         </section>
         <div class="container">        
-            <div class="social-media text-right">
-                <a href="#" title="On Facebook"><i class="ion-social-facebook"></i></a>
-                <a href="#" title="On LinkedIn"><i class="ion-social-linkedin"></i></a>
-                <a href="#" title="On Twitter"><i class="ion-social-twitter"></i></a>
-                <a href="#" title="On Pinterest"><i class="ion-social-pinterest"></i></a>
-            </div>    
+            <div class="social-media">
+                <a href="#" title="On Facebook"><i class="ion-social-facebook"></i><span class="social-label">/AMepham</span></a>
+                <a href="#" title="On LinkedIn"><i class="ion-social-linkedin"></i><span class="social-label">/in/AndyMepham</span></a>
+                <a href="#" title="On Twitter"><i class="ion-social-twitter"></i><span class="social-label">@AndrewMephamIT</span></a>
+                <a href="#" title="On Pinterest"><i class="ion-social-pinterest"></i><span class="social-label">/AndyMeps</span></a>
+            </div>      
             <div class="navbar">
                 <ul class="navbar-inline">
                     <li class="navbar-inline-item">
