--- a/public/index.html
+++ b/public/index.html
@@ -34,12 +34,9 @@
         <section class="header">
             <h2 class="title">Andy Mepham</h2>
         </section>
-        <div class="container">        
-            <div class="social-media">
-                <a href="#" title="On Facebook"><i class="ion-social-facebook"></i><span class="social-label">/AMepham</span></a>
-                <a href="#" title="On LinkedIn"><i class="ion-social-linkedin"></i><span class="social-label">/in/AndyMepham</span></a>
-                <a href="#" title="On Twitter"><i class="ion-social-twitter"></i><span class="social-label">@AndrewMephamIT</span></a>
-                <a href="#" title="On Pinterest"><i class="ion-social-pinterest"></i><span class="social-label">/AndyMeps</span></a>
+        <div class="container">  
+            <div class="social-media" 
+                 data-ng-include="'app/partials/social-media.html'">
             </div>      
             <div class="navbar">
                 <ul class="navbar-inline">
